--- a/nanofunds/nanofunds.csproj
+++ b/nanofunds/nanofunds.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>nanofunds</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44300</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -39,6 +39,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -93,15 +101,45 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="content\materialize\css\materialize.css" />
+    <Content Include="content\materialize\css\materialize.min.css" />
+    <Content Include="content\materialize\font\material-design-icons\LICENSE.txt" />
+    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.svg" />
     <Content Include="index.html" />
+    <Content Include="content\materialize\font\roboto\Roboto-Thin.woff2" />
+    <Content Include="content\materialize\font\roboto\Roboto-Thin.woff" />
+    <Content Include="content\materialize\font\roboto\Roboto-Thin.ttf" />
+    <Content Include="content\materialize\font\roboto\Roboto-Regular.woff2" />
+    <Content Include="content\materialize\font\roboto\Roboto-Regular.woff" />
+    <Content Include="content\materialize\font\roboto\Roboto-Regular.ttf" />
+    <Content Include="content\materialize\font\roboto\Roboto-Medium.woff2" />
+    <Content Include="content\materialize\font\roboto\Roboto-Medium.woff" />
+    <Content Include="content\materialize\font\roboto\Roboto-Medium.ttf" />
+    <Content Include="content\materialize\font\roboto\Roboto-Light.woff2" />
+    <Content Include="content\materialize\font\roboto\Roboto-Light.woff" />
+    <Content Include="content\materialize\font\roboto\Roboto-Light.ttf" />
+    <Content Include="content\materialize\font\roboto\Roboto-Bold.woff2" />
+    <Content Include="content\materialize\font\roboto\Roboto-Bold.woff" />
+    <Content Include="content\materialize\font\roboto\Roboto-Bold.ttf" />
+    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.woff2" />
+    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.woff" />
+    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.ttf" />
+    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.eot" />
+    <None Include="Scripts\jquery-2.1.1.intellisense.js" />
+    <Content Include="Scripts\jquery-2.1.1.js" />
+    <Content Include="Scripts\jquery-2.1.1.min.js" />
+    <Content Include="Scripts\materialize\materialize.js" />
+    <Content Include="Scripts\materialize\materialize.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\nanofunds - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nanofunds - Web Deploy.pubxml" />
+    <Content Include="Scripts\jquery-2.1.1.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
