--- a/nanofunds/Web.config
+++ b/nanofunds/Web.config
@@ -22,4 +22,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="nanofunds" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=nanofunds;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
