--- a/nanofunds/nanofunds.csproj
+++ b/nanofunds/nanofunds.csproj
@@ -127,26 +127,26 @@
     <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.woff" />
     <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.ttf" />
     <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.eot" />
-    <Content Include="Scripts\app\common\factories\authenticationFactory.js" />
-    <Content Include="Scripts\app\common\factories\httpInterceptorFactory.js" />
-    <Content Include="Scripts\app\home\home.html" />
-    <Content Include="Scripts\app\indexController.js" />
-    <Content Include="Scripts\app\nano.js" />
-    <Content Include="Scripts\app\nanoConfig.js" />
-    <Content Include="Scripts\app\nav\nav.html" />
-    <Content Include="Scripts\app\nav\navController.js" />
-    <Content Include="Scripts\lib\angular-route\angular-route.js" />
-    <Content Include="Scripts\lib\angular-route\angular-route.min.js" />
-    <Content Include="Scripts\lib\angular-sanitize\angular-sanitize.js" />
-    <Content Include="Scripts\lib\angular-sanitize\angular-sanitize.min.js" />
-    <Content Include="Scripts\lib\angular\angular.min.js" />
-    <Content Include="Scripts\lib\jquery\jquery-2.1.1.min.js" />
-    <Content Include="Scripts\lib\materialize\materialize.js" />
-    <Content Include="Scripts\lib\materialize\materialize.min.js" />
-    <Content Include="Scripts\lib\moment\moment.min.js" />
-    <Content Include="Scripts\lib\ngCurrency\ng-currency.min.js" />
-    <Content Include="Scripts\lib\ngstorage\ngStorage.js" />
-    <Content Include="Scripts\lib\ngstorage\ngStorage.min.js" />
+    <Content Include="app\common\factories\authenticationFactory.js" />
+    <Content Include="app\common\factories\httpInterceptorFactory.js" />
+    <Content Include="app\home\home.html" />
+    <Content Include="app\indexController.js" />
+    <Content Include="app\nano.js" />
+    <Content Include="app\nanoConfig.js" />
+    <Content Include="app\nav\nav.html" />
+    <Content Include="app\nav\navController.js" />
+    <Content Include="lib\angular-route\angular-route.js" />
+    <Content Include="lib\angular-route\angular-route.min.js" />
+    <Content Include="lib\angular-sanitize\angular-sanitize.js" />
+    <Content Include="lib\angular-sanitize\angular-sanitize.min.js" />
+    <Content Include="lib\angular\angular.min.js" />
+    <Content Include="lib\jquery\jquery-2.1.1.min.js" />
+    <Content Include="lib\materialize\materialize.js" />
+    <Content Include="lib\materialize\materialize.min.js" />
+    <Content Include="lib\moment\moment.min.js" />
+    <Content Include="lib\ngCurrency\ng-currency.min.js" />
+    <Content Include="lib\ngstorage\ngStorage.js" />
+    <Content Include="lib\ngstorage\ngStorage.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
