--- a/nanofunds/nanofunds.csproj
+++ b/nanofunds/nanofunds.csproj
@@ -107,6 +107,16 @@
     <Content Include="content\materialize\css\materialize.min.css" />
     <Content Include="content\materialize\font\material-design-icons\LICENSE.txt" />
     <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.svg" />
+    <Content Include="css\materialize.css" />
+    <Content Include="css\materialize.min.css" />
+    <Content Include="css\style.css" />
+    <Content Include="font\material-design-icons\LICENSE.txt" />
+    <Content Include="font\material-design-icons\Material-Design-Icons.svg" />
+    <Content Include="img\background1.jpg" />
+    <Content Include="img\background2.jpg" />
+    <Content Include="img\background3.png" />
+    <Content Include="img\NanoLogo.png" />
+    <Content Include="img\NanoLogoSmall.png" />
     <Content Include="index.html" />
     <Content Include="content\materialize\font\roboto\Roboto-Thin.woff2" />
     <Content Include="content\materialize\font\roboto\Roboto-Thin.woff" />
@@ -135,12 +145,14 @@
     <Content Include="app\nanoConfig.js" />
     <Content Include="app\nav\nav.html" />
     <Content Include="app\nav\navController.js" />
+    <Content Include="lib\angular-materialize\angular-materialize.js" />
     <Content Include="lib\angular-route\angular-route.js" />
     <Content Include="lib\angular-route\angular-route.min.js" />
     <Content Include="lib\angular-sanitize\angular-sanitize.js" />
     <Content Include="lib\angular-sanitize\angular-sanitize.min.js" />
     <Content Include="lib\angular\angular.min.js" />
     <Content Include="lib\jquery\jquery-2.1.1.min.js" />
+    <Content Include="lib\materialize\init.js" />
     <Content Include="lib\materialize\materialize.js" />
     <Content Include="lib\materialize\materialize.min.js" />
     <Content Include="lib\moment\moment.min.js" />
@@ -157,6 +169,25 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="font\material-design-icons\Material-Design-Icons.eot" />
+    <Content Include="font\material-design-icons\Material-Design-Icons.ttf" />
+    <Content Include="font\material-design-icons\Material-Design-Icons.woff" />
+    <Content Include="font\material-design-icons\Material-Design-Icons.woff2" />
+    <Content Include="font\roboto\Roboto-Bold.ttf" />
+    <Content Include="font\roboto\Roboto-Bold.woff" />
+    <Content Include="font\roboto\Roboto-Bold.woff2" />
+    <Content Include="font\roboto\Roboto-Light.ttf" />
+    <Content Include="font\roboto\Roboto-Light.woff" />
+    <Content Include="font\roboto\Roboto-Light.woff2" />
+    <Content Include="font\roboto\Roboto-Medium.ttf" />
+    <Content Include="font\roboto\Roboto-Medium.woff" />
+    <Content Include="font\roboto\Roboto-Medium.woff2" />
+    <Content Include="font\roboto\Roboto-Regular.ttf" />
+    <Content Include="font\roboto\Roboto-Regular.woff" />
+    <Content Include="font\roboto\Roboto-Regular.woff2" />
+    <Content Include="font\roboto\Roboto-Thin.ttf" />
+    <Content Include="font\roboto\Roboto-Thin.woff" />
+    <Content Include="font\roboto\Roboto-Thin.woff2" />
     <None Include="Properties\PublishProfiles\nanofunds - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nanofunds - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
