--- a/nanofunds/nanofunds.csproj
+++ b/nanofunds/nanofunds.csproj
@@ -48,8 +48,16 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
@@ -65,6 +73,10 @@
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -92,9 +104,6 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System.Web.Mvc">
-      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -109,40 +118,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="content\materialize\css\materialize.css" />
-    <Content Include="content\materialize\css\materialize.min.css" />
-    <Content Include="content\materialize\font\material-design-icons\LICENSE.txt" />
-    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.svg" />
     <Content Include="css\materialize.css" />
     <Content Include="css\materialize.min.css" />
     <Content Include="css\style.css" />
     <Content Include="font\material-design-icons\LICENSE.txt" />
     <Content Include="font\material-design-icons\Material-Design-Icons.svg" />
+    <Content Include="Global.asax" />
     <Content Include="img\background1.jpg" />
     <Content Include="img\background2.jpg" />
     <Content Include="img\background3.png" />
     <Content Include="img\NanoLogo.png" />
     <Content Include="img\NanoLogoSmall.png" />
-    <Content Include="index.html" />
-    <Content Include="content\materialize\font\roboto\Roboto-Thin.woff2" />
-    <Content Include="content\materialize\font\roboto\Roboto-Thin.woff" />
-    <Content Include="content\materialize\font\roboto\Roboto-Thin.ttf" />
-    <Content Include="content\materialize\font\roboto\Roboto-Regular.woff2" />
-    <Content Include="content\materialize\font\roboto\Roboto-Regular.woff" />
-    <Content Include="content\materialize\font\roboto\Roboto-Regular.ttf" />
-    <Content Include="content\materialize\font\roboto\Roboto-Medium.woff2" />
-    <Content Include="content\materialize\font\roboto\Roboto-Medium.woff" />
-    <Content Include="content\materialize\font\roboto\Roboto-Medium.ttf" />
-    <Content Include="content\materialize\font\roboto\Roboto-Light.woff2" />
-    <Content Include="content\materialize\font\roboto\Roboto-Light.woff" />
-    <Content Include="content\materialize\font\roboto\Roboto-Light.ttf" />
-    <Content Include="content\materialize\font\roboto\Roboto-Bold.woff2" />
-    <Content Include="content\materialize\font\roboto\Roboto-Bold.woff" />
-    <Content Include="content\materialize\font\roboto\Roboto-Bold.ttf" />
-    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.woff2" />
-    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.woff" />
-    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.ttf" />
-    <Content Include="content\materialize\font\material-design-icons\Material-Design-Icons.eot" />
     <Content Include="app\common\factories\authenticationFactory.js" />
     <Content Include="app\common\factories\httpInterceptorFactory.js" />
     <Content Include="app\home\home.html" />
@@ -168,10 +154,18 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\nanofunds.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -194,9 +188,10 @@
     <Content Include="font\roboto\Roboto-Thin.ttf" />
     <Content Include="font\roboto\Roboto-Thin.woff" />
     <Content Include="font\roboto\Roboto-Thin.woff2" />
-    <Content Include="index.cshtml" />
     <None Include="Properties\PublishProfiles\nanofunds - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nanofunds - Web Deploy.pubxml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
