--- a/nanofunds/nanofunds.csproj
+++ b/nanofunds/nanofunds.csproj
@@ -20,7 +20,6 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
-    <WebGreaseLibPath>..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,10 +39,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -67,7 +62,6 @@
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
-    <Reference Include="System.Transactions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -108,10 +102,6 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
-    <Reference Include="WebGrease, Version=1.5.2.14234, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -128,10 +118,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\dashboard\dashboard.html" />
+    <Content Include="app\dashboard\dashBoardController.js" />
     <Content Include="app\footer\footer.html" />
     <Content Include="css\materialize.css" />
     <Content Include="css\materialize.min.css" />
     <Content Include="css\style.css" />
+    <Content Include="lib\chart\Chart.js" />
     <Content Include="font\material-design-icons\LICENSE.txt" />
     <Content Include="font\material-design-icons\Material-Design-Icons.svg" />
     <Content Include="Global.asax" />
@@ -148,6 +141,10 @@
     <Content Include="app\nanoConfig.js" />
     <Content Include="app\nav\nav.html" />
     <Content Include="app\nav\navController.js" />
+    <Content Include="lib\angular-chart\angular-chart.css" />
+    <Content Include="lib\angular-chart\angular-chart.js" />
+    <Content Include="lib\angular-chart\angular-chart.min.css" />
+    <Content Include="lib\angular-chart\angular-chart.min.js" />
     <Content Include="lib\angular-materialize\angular-materialize.js" />
     <Content Include="lib\angular-route\angular-route.js" />
     <Content Include="lib\angular-route\angular-route.min.js" />
@@ -169,21 +166,21 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Logic\EstimatedReceiptsCalculator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\ActualReceipt.cs" />
+    <Compile Include="Models\Enums\TTransaction.cs" />
     <Compile Include="Models\Ledger.cs" />
     <Compile Include="Models\Merchant.cs" />
     <Compile Include="Models\nanofunds.cs" />
-    <Compile Include="Models\Receipt.cs" />
-    <Compile Include="Models\Enums\TTransaction.cs" />
-    <Compile Include="Models\Transaction.cs" />
     <Compile Include="Models\PredictedReceipt.cs" />
+    <Compile Include="Models\Receipt.cs" />
+    <Compile Include="Models\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -208,6 +205,9 @@
     <Content Include="font\roboto\Roboto-Thin.ttf" />
     <Content Include="font\roboto\Roboto-Thin.woff" />
     <Content Include="font\roboto\Roboto-Thin.woff2" />
+    <Content Include="lib\angular-chart\angular-chart.js.tar.gz" />
+    <Content Include="lib\angular-chart\angular-chart.min.css.map" />
+    <Content Include="lib\angular-chart\angular-chart.min.js.map" />
     <None Include="Properties\PublishProfiles\nanofunds - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nanofunds - Web Deploy.pubxml" />
     <Content Include="Views\Home\Index.cshtml" />
@@ -220,7 +220,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="app\dashboard\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
@@ -237,7 +236,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>2275</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
