Add distribution and repayments logic and tests

--- a/nanofunds.Tests/nanofunds.Tests.csproj
+++ b/nanofunds.Tests/nanofunds.Tests.csproj
@@ -64,6 +64,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="EstimatedReceiptsCalculatorTests.cs" />
+    <Compile Include="FundsDistributorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
