--- a/nanofunds/nanofunds.csproj
+++ b/nanofunds/nanofunds.csproj
@@ -173,6 +173,7 @@
     </Compile>
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Logic\EstimatedReceiptsCalculator.cs" />
+    <Compile Include="Logic\FundsDistributor.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\ActualReceipt.cs" />
@@ -181,8 +182,10 @@
     <Compile Include="Models\nanofunds.cs" />
     <Compile Include="Models\Receipt.cs" />
     <Compile Include="Models\Enums\TTransaction.cs" />
+    <Compile Include="Models\Repayment.cs" />
     <Compile Include="Models\Transaction.cs" />
     <Compile Include="Models\PredictedReceipt.cs" />
+    <Compile Include="Models\Enums\TTransactionKind.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
