--- a/nanofunds/Web.config
+++ b/nanofunds/Web.config
@@ -4,11 +4,17 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  
   <configSections>
-    
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <add key="CloverApiUrl" value="https://apisandbox.dev.clover.com/"/>
+    <add key="ClientId" value="4DCJSK51BSG52"/>
+    <add key="SecretKey" value="ac95222a-3b93-2fed-9255-979baf3ad501"/>
+    <add key="RedirectUrl" value=""/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
