--- a/nanofunds/Web.config
+++ b/nanofunds/Web.config
@@ -10,7 +10,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="CloverApiUrl" value="https://apisandbox.dev.clover.com/"/>
+    <add key="CloverApiUrl" value="https://apisandbox.dev.clover.com/v3"/>
+    <add key="CloverTokenEndpoint" value="https://sandbox.dev.clover.com"/>
     <add key="ClientId" value="4DCJSK51BSG52"/>
     <add key="SecretKey" value="ac95222a-3b93-2fed-9255-979baf3ad501"/>
     <add key="RedirectUrl" value=""/>
