--- a/nanofunds/nanofunds.csproj
+++ b/nanofunds/nanofunds.csproj
@@ -122,6 +122,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\AccountSetUp\CreationForm.html" />
     <Content Include="app\common\factories\restFactory.js" />
     <Content Include="app\dashboard\dashboard.html" />
     <Content Include="app\dashboard\dashBoardController.js" />
@@ -181,6 +182,8 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\ActualReceipt.cs" />
+    <Compile Include="Models\DTOS\Authorization.cs" />
+    <Compile Include="Models\DTOS\CloverMerchant.cs" />
     <Compile Include="Models\Ledger.cs" />
     <Compile Include="Models\Merchant.cs" />
     <Compile Include="Models\nanofunds.cs" />
